tests/test_assets/semantics/arrays/fail/string_initializer.cog
name: u8[5] = "hello";